[package]
name = "simple-flasher"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
miette = "4.2.1"
iced = {git = "https://github.com/hecrj/iced.git", features = ["svg", "canvas", "tokio"]}
iced_native = {git = "https://github.com/hecrj/iced.git"}
iced_futures = {git = "https://github.com/hecrj/iced.git"}
espflash = {git = "https://github.com/jessebraham/espflash.git", branch = "fixes/serialport"}
usb_enumeration = "0.1.2"
futures = "0.3.21"
parking_lot = "0.12.0"
tokio = { version = "1.17.0", features = ["macros"]}

[profile.release]
strip = "debuginfo"
lto = true

[patch.crates-io]
serialport = { git = "https://github.com/jessebraham/serialport-rs" }