[package]
name = "simple-flasher"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
miette = "4.2.1"
iced = {version = "0.4.2", features = ["svg", "canvas", "tokio"]}
iced_native = "0.5.0"
iced_futures = "0.4.0"
elf-utilities = "0.2.20"
espflash = {git = "https://github.com/kizeevov/espflash", branch = "enhancement/flash-bin"}
usb_enumeration = "0.1.2"
futures = "0.3"
parking_lot = "0.12"
tokio = { version = "1.18", features = ["macros"]}
image = "0.24"

i18n-embed = { version = "0.13.4", features = ["fluent-system"]}
i18n-embed-fl = "0.6.4"
rust-embed = "6"
unic-langid = "0.9"
once_cell = "1.5"

[profile.release]
strip = "debuginfo"
lto = true